--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to GitHub Pages
+name: Deploy Frontend
 
 on:
   push:
@@ -32,8 +32,6 @@ jobs:
       
       - name: Build
         run: npm run build
-        env:
-          NODE_ENV: production
       
       - name: Setup Pages
         uses: actions/configure-pages@v4
