--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@codemirror/state": "^6.4.0",
     "@codemirror/view": "^6.25.1",
     "y-codemirror.next": "^0.3.5",
+    "y-protocols": "^1.0.6",
     "y-webrtc": "^10.2.1",
     "yjs": "^13.6.8"
   },
