--- a/package.json
+++ b/package.json
@@ -20,15 +20,18 @@
   "homepage": "https://metaory.github.io/lanpad/",
   "repository": "git+https://github.com/metaory/lanpad.git",
   "dependencies": {
-    "ws": "^8.16.0",
-    "yjs": "^13.6.8",
-    "y-webrtc": "^10.2.1",
-    "y-protocols": "^1.0.6",
-    "y-codemirror.next": "^0.3.5",
     "@codemirror/commands": "^6.3.3",
     "@codemirror/lang-javascript": "^6.2.1",
     "@codemirror/state": "^6.4.0",
-    "@codemirror/view": "^6.25.1"
+    "@codemirror/theme-one-dark": "^6.1.2",
+    "@codemirror/view": "^6.25.1",
+    "@fontsource/bungee": "^5.2.6",
+    "@fontsource/nabla": "^5.2.8",
+    "ws": "^8.16.0",
+    "y-codemirror.next": "^0.3.5",
+    "y-protocols": "^1.0.6",
+    "y-webrtc": "^10.2.1",
+    "yjs": "^13.6.8"
   },
   "devDependencies": {
     "vite": "^6.0.0"
